[tool.poetry]
name = "QuadratiK"
version = "1.1.5"
description = "QuadratiK includes test for multivariate normality, test for uniformity on the Sphere, non-parametric two- and k-sample tests, random generation of points from the Poisson kernel-based density and clustering algorithm for spherical data."
license = "GPL-3.0-only"
authors = [
    "Giovanni Saraceno <gsaracen@buffalo.edu>",
    "Marianthi Markatou <markatou@buffalo.edu>",
    "Raktim Mukhopadhyay <raktimmu@buffalo.edu>",
    "Mojgan Golzy <golzym@health.missouri.edu>",
]
maintainers = ["Raktim Mukhopadhyay <raktimmu@buffalo.edu>"]
readme = "README.rst"
packages = [
    { include = "QuadratiK" },
    { include = "tests" },
    { include = "docs" },
]
include = [{ path = "QuadratiK/ui/.streamlit", format = ["sdist", "wheel"] }]

[tool.poetry.dependencies]
python = ">=3.10, <=3.14"
scikit-learn = "^1.3"
scipy = "^1.11"
streamlit = "^1.30.0"
matplotlib = "^3.8.2"
plotly = "^5.15.0"
tabulate = "^0.8"
pandas = "^2.1.3"
scikit-fda = "^0.10.1"
numpy = [
    { version = "^1.26.2", python = ">=3.10,<3.13" },
    { version = "^2.0.0", python = ">=3.13" }
]

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst-parser = ">=0.16"
sphinx = ">=4.0"
sphinx-autobuild = ">=2021.0"
sphinx-book-theme = ">=1.0"
nbsphinx = ">0.9"

[tool.poetry.group.tests.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.poetry.urls]
Homepage = "https://github.com/rmj3197/QuadratiK"
Documentation = "https://quadratik.readthedocs.io"

[tool.ruff]
line-length = 88 # same as black
exclude = ["*.ipynb"]

[tool.ruff.lint]
extend-select = [
    "B", # flake8-bugbear
    "I", # isort
    "PGH", # pygrep-hooks
    "RUF", # Ruff-specific
    "UP", # pyupgrade
]